--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "alwaysStrict": true,
     "noImplicitThis": true,
     "useUnknownInCatchVariables": true,
-   
+     "baseUrl": "src"
   }
 }
