--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^3.6.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
