--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "async-race",
+  "homepage": "https://JafarDjurayev.github.io/async-race/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
-    "ci:format": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\""
+    "ci:format": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -27,6 +29,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "prettier": "^3.6.1",
     "typescript": "~5.8.3",
