--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-race",
-  "homepage": "https://JafarDjurayev.github.io/async-race/",
+  "homepage": "https://jafardjurayev.github.io/async-race/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
